--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,8 @@ SUPABASE_JWT_SECRET="your_JWT_secret_key"
 GITHUB_CLIENT_ID="your_github_oauth_client_id"
 GITHUB_CLIENT_SECRET="your_github_oauth_client_secret" # 秘密キーなので漏洩に注意
 
+# read userだけのPATを発行
+GITHUB_TOKEN="your_generated_github_token"
+
 # WebSocketサーバーのポート (例: 8080)
 PORT=8080
