--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-SUPABASE_URL="https://xxxx.supabase.co"
-SUPABASE_SERVICE_ROLE_KEY="your_service_role_key" # 秘密キーなので漏洩に注意
-SUPABASE_JWT_SECRET="your_JWT_secret_key"
+DATABASE_URL="https://xxxx.supabase.co"
 
 GITHUB_CLIENT_ID="your_github_oauth_client_id"
 GITHUB_CLIENT_SECRET="your_github_oauth_client_secret" # 秘密キーなので漏洩に注意
